issue#44 - user-role-combos (#442)
Co-authored-by: Anupam Jain <anupam2204.smart@gmail.com>
Reviewed-on: https://gitea.local.coddicted.com/coddicted/buzzma/pulls/442
Reviewed-by: Payam Rastogi <payamrastogi@gmail.com>